Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32139

Windows: file browser not working properly using the qmlvideo example

    XMLWordPrintable

Details

    • QtDeclarative: c71c7dadda2b15d7dbde6591172a1d7e85b7fbe6 , 646503bfcd53897a630a1844860e139157d65640 QtMultiMedia: de9092389f2e43370c2cfcd6759d08cc11da9a68

    Description

      Using RC2 packages qt-windows-opensource-5.1.0-rc2-msvc2010-x86-offline and qt-windows-opensource-5.1.0-rc2-mingw48_opengl-x86-offline. On windows 7 pro 64b.

      • Open the example examples/multimedia/qmlvideo
      • click "Select file 1"
      • click the top left green arrow to go up
        => problem, nothing happens
      • now click on the debug folder and up again 2 times
      • the navigation up work as expected
      • click up multiple times until there is not folder to step up to
        => problem it navigates to an undefined file:///Qt and the page is blank. Thus it is not possible to navigate away from this useless page. Restarting the application is needed to reset the current folder to an existing one.

      This problem does not happen on Ubuntu.

      Attachments

        For Gerrit Dashboard: QTBUG-32139
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes